tests/NormalTests/paczka1/fuzzy1/62395318.err
Error in line 21: ?A3=7
Error in line 28: IMr9crE S725 65,3
